[package]
name = "berg-compiler"
version = "0.1.0"
authors = ["John Keiser <john@johnkeiser.com>"]
edition = "2024"

[dependencies]
num = "*"
fnv = "*"
clippy = {version = "*", optional = true}
matches = "*"
berg-util = {path = "../berg-util"}
berg-parser = {path = "../berg-parser"}

[dev-dependencies]
clippy = {version = "*"}
