[package]
name = "berg-parser"
version = "0.1.0"
authors = ["John Keiser <john@johnkeiser.com>"]
edition = "2021"

[dependencies]
clippy = {version = "*", optional = true}
berg-util = {path = "../berg-util"}
string-interner = "*"
derive_more = "*"
nonzero_ext = "*"

[dev-dependencies]
clippy = {version = "*"}
