[package]
name = "berg"
version = "0.1.0"
authors = ["John Keiser <john@johnkeiser.com>"]
edition = "2024"

[dependencies]
log = "0.3"
env_logger = "0.4"
docopt = "1"
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`
berg-compiler = { path = "../berg-compiler" }
