[package]
name = "berg"
version = "0.1.0"
authors = ["John Keiser <john@johnkeiser.com>"]

[dependencies]
log = "0.3"
env_logger = "0.4"
docopt = { git = "https://github.com/docopt/docopt.rs" }
docopt_macros = { git = "https://github.com/docopt/docopt.rs" }
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`
berg-compiler = { path = "../berg-compiler" }
